# google-maps-review-scraper

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/: __init__.py  emulation.py  logger.py  parser.py  scraper.py  time_utils.py
